# DynamicArmorVariants-1.5

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/Ext/: Actor.h
src/PCH/: PCH.h
src/RE/: Offset.Ext.h
src/main/: SKSEPlugin.cpp  WornFormUpdater.cpp  WornFormUpdater.h
tools/Modules/: SKSEPlugin.cmake
